--- a/Website/prices.html
+++ b/Website/prices.html
@@ -9,59 +9,59 @@
 <body>
 	<h1>Costume Price List</h1>
 		
-			<div id="firstcolumn">
-				<ul>
-					<li><strong><span class="table1_heading">Costume</span></strong></li>
-					<li>Spiderman</li>
-					<li>Elf</li>
-					<li>Darth Vader</li>
-					<li>Ironman (with rocket boots)</li>
-					<li>Bayonetta</li>
-					<li>Diablo 3 - Demon Hunter</li>
-					<li>Harley Quinn</li>
-					<li>Meteroid - Samus Aran</li>
-					<li>Peter Pan</li>
-					<li>Princess Leia (White)</li>
-					<li>Spock (Star Trek)</li>
-				</ul>
-			</div>
+		<div id="firstcolumn">
+			<ul>
+				<li><strong><span class="table1_heading">Costume</span></strong></li>
+				<li>Spiderman</li>
+				<li>Elf</li>
+				<li>Darth Vader</li>
+				<li>Ironman (with rocket boots)</li>
+				<li>Bayonetta</li>
+				<li>Diablo 3 - Demon Hunter</li>
+				<li>Harley Quinn</li>
+				<li>Meteroid - Samus Aran</li>
+				<li>Peter Pan</li>
+				<li>Princess Leia (White)</li>
+				<li>Spock (Star Trek)</li>
+			</ul>
+		</div>
 			
-			<div id="secondcolumn">
-				<ul>
-					<li><strong><span class="table2_heading">Size</span></strong></li>
-					<li>12</li>
-					<li>16</li>
-					<li>M</li>
-					<li>M</li>
-					<li>8</li>
-					<li>10</li>
-					<li>18</li>
-					<li>L</li>
-					<li>XS</li>
-					<li>10</li>
-					<li>S</li>
-				</ul>
-			</div>
+		<div id="secondcolumn">
+			<ul>
+				<li><strong><span class="table2_heading">Size</span></strong></li>
+				<li>12</li>
+				<li>16</li>
+				<li>M</li>
+				<li>M</li>
+				<li>8</li>
+				<li>10</li>
+				<li>18</li>
+				<li>L</li>
+				<li>XS</li>
+				<li>10</li>
+				<li>S</li>
+			</ul>
+		</div>
 			
-			<div id="thirdcolumn">
-				<ul>
-					<li><strong><span class="table3_heading">Price</span></strong></li>
-					<li>$49</li>
-					<li>$35</li>
-					<li>$149</li>
-					<li>$2500</li>
-					<li>$300</li>
-					<li>$250</li>
-					<li>$125</li>
-					<li>$850</li>
-					<li>$49</li>
-					<li>$100</li>
-					<li>$1235</li>
-				</ul>
-			</div>	
+		<div id="thirdcolumn">
+			<ul>
+				<li><strong><span class="table3_heading">Price</span></strong></li>
+				<li>$49</li>
+				<li>$35</li>
+				<li>$149</li>
+				<li>$2500</li>
+				<li>$300</li>
+				<li>$250</li>
+				<li>$125</li>
+				<li>$850</li>
+				<li>$49</li>
+				<li>$100</li>
+				<li>$1235</li>
+			</ul>
+		</div>	
 		
 		<div id="button">
-			<a href="links.html"><img class="image" src="./images/backarrow1.png" alt="Alternative text"/></a>
+			<a href="links.html"><img class="image" src="./images/backarrow.png" alt="No picture available"/></a>
 		</div>
 		
 		
