--- a/Website/sign_up.html
+++ b/Website/sign_up.html
@@ -7,14 +7,16 @@
 </head>
 
 <body>
-	<div id="navigation">
-		<a href="index.html">Home</a>
-		<a href="about_us.html">About Us</a>
-		<a href="contact_us.html">Contact Us</a>
-		<a href="announcements.html">Announcements</a>
-		<a href="links.html">Links</a>
-		<a href="sign_up.html">Sign Up</a>
-		<a href="guidelines.html">Guidelines</a>
+	<div id="navigation"><!-- page navigation links -->
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about_us.html">About Us</a></li>
+			<li><a href="contact_us.html">Contact Us</a></li>
+			<li><a href="announcements.html">Announcements</a></li>
+			<li><a href="links.html">Links</a></li>
+			<li><a href="sign_up.html">Sign Up</a></li>
+			<li><a href="guidelines.html">Guidelines</a></li>
+		</ul>
 	</div>
 		
 	<div id="heading">
@@ -26,7 +28,8 @@
 		
 	<h1>Sign Up</h1>
 		<div id="signup">
-			<p  class="indent">To sign up <strong>email: </strong><a href="mailto: cossieplay@gmail.com">cossieplay@gmail.com</a><br/>
+			<p  class="indent">
+				To sign up <strong>email: </strong><a href="mailto: cossieplay@gmail.com">cossieplay@gmail.com</a><br/>
 				Include the following information:
 			</p>
 			<ul class="address">
@@ -34,6 +37,9 @@
 				<li>Phone number</li>
 				<li>Size of group</li>
 			</ul>
+			<p class="indent">
+				<span style="color:yellow">and we will get right back to you --</span>
+			</p>
 		</div>
 </body>
 </html>
