--- a/Website/contact_us.html
+++ b/Website/contact_us.html
@@ -7,14 +7,16 @@
 </head>
 
 <body>
-	<div id="navigation">
-		<a href="index.html">Home</a>
-		<a href="about_us.html">About Us</a>
-		<a href="contact_us.html">Contact Us</a>
-		<a href="announcements.html">Announcements</a>
-		<a href="links.html">Links</a>
-		<a href="sign_up.html">Sign Up</a>
-		<a href="guidelines.html">Guidelines</a>
+	<div id="navigation"><!-- page navigation links -->
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about_us.html">About Us</a></li>
+			<li><a href="contact_us.html">Contact Us</a></li>
+			<li><a href="announcements.html">Announcements</a></li>
+			<li><a href="links.html">Links</a></li>
+			<li><a href="sign_up.html">Sign Up</a></li>
+			<li><a href="guidelines.html">Guidelines</a></li>
+		</ul>
 	</div>
 	
 	<div id="heading">
