--- a/Website/links.html
+++ b/Website/links.html
@@ -7,27 +7,32 @@
 </head>
 
 <body>
-	<div id="navigation">
-		<a href="index.html">Home</a>
-		<a href="about_us.html">About Us</a>
-		<a href="contact_us.html">Contact Us</a>
-		<a href="announcements.html">Announcements</a>
-		<a href="links.html">Links</a>
-		<a href="sign_up.html">Sign Up</a>
-		<a href="guidelines.html">Guidelines</a>
+	<div id="navigation"><!-- page navigation links -->
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about_us.html">About Us</a></li>
+			<li><a href="contact_us.html">Contact Us</a></li>
+			<li><a href="announcements.html">Announcements</a></li>
+			<li><a href="links.html">Links</a></li>
+			<li><a href="sign_up.html">Sign Up</a></li>
+			<li><a href="guidelines.html">Guidelines</a></li>
+		</ul>
 	</div>
 	
 	<div id="heading">
 		Cossieplay <span class="lowlight">helps you to </span><span class="underline">Be</span> Your Fantasy!!!
 	</div>
 	
-	<p class="light">High school kids and young adults are most welcome to come and show us oldies 
+	<p class="light">
+		High school kids and young adults are most welcome to come and show us oldies 
 		how to step out in costume
 	</p>
 	
 	<h1>Links</h1>
-		<h2 class="indent">Get your second-hand costumes <br/>
-		<p class="position"><a href="prices.html">here</a></h2>
-		</p>
+		<h2>Price your second-hand costumes using this</h2>
+			<p class="position">
+				<a href="prices.html">Link</a>
+			</p>
+	
 </body>
 </html>
